# mint

./: # MBIT+ Dither.md  .gitignore  Cargo.toml  MBIT+ Implementation Plan.md  README.md
.github/workflows/: ci.yml
examples/: mint.toml
src/: cli.rs  config.rs  dither.rs  json_report.rs  lib.rs  main.rs  pipeline.rs
src/audio/: buffer.rs  io_read.rs  io_write.rs  mod.rs
src/dither/: adaptive_mbit.rs  mbit_plus.rs  multichannel.rs  psychoacoustic.rs
src/ops/: bitdepth.rs  limiter.rs  loudness.rs  mod.rs  resample.rs
tests/: bitdepth.rs  config_parse.rs  f64_input.rs  limiter.rs  loudness.rs  noise_shaping.rs  output_formats.rs  resample.rs  soxr.rs
tests/fixtures/: minimal_targets.toml
